<resources>
    <string name="app_name">Derm Ai</string>
    <string name="title_welcome_page">Hello I\'M DERM</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sub_title">How can i help you?</string>
    <string name="message_login_page">Masukkan Datamu Disini</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_signup_page">Lengkapi Data Dirimu Disini</string>
    <string name="name">Name</string>
    <string name="title_main">Scan your face here!</string>
    <string name="message_main">Scan your face and get personalized skincare recommendations</string>
    <string name="title_list">Recommendations</string>
    <string name="logout">Logout</string>
    <string name="image_classifier_failed">Gagal Clasifikasi</string>
    <string name="skin_infor">Skin Information</string>
    <string name="skin_rekomen">Skincare Recomendations</string>
</resources>