<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cream"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/texts_and_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/scan_icon"
                android:layout_marginEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_main"
                    android:textSize="18sp"
                    android:textColor="@color/orange" />

                <TextView
                    android:layout_width="304dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/message_main"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/scan_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Scan"
                    android:textSize="20sp"
                    android:backgroundTint="@color/orange" />
            </LinearLayout>

            <ImageView
                android:id="@+id/scan_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="1dp"
                android:src="@drawable/ic_scan" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/recommendations_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_list"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:layout_below="@id/list"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recommendations_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recommendations_title"
        android:layout_marginTop="3dp" />
</RelativeLayout>
